# badaboom

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  compute_asteroids_statistics.py  compute_fireballs_statistics.py  compute_statistics.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml  pre-commit.yml
badaboom/: __init__.py  asteroid_parser.py  fireballs_parser.py
badaboom/parsers/: __init__.py  asteroids.py  fireballs.py
docs/: index.md
docs/references/: init.md  parsers.md
example_results/: Figure 1 - unique events per year.html  Figure 2 - asteroid size per year.html  biggest_asteroid_between_1980_2030.md  output_1980_2030.txt
references/init/: index.html
references/parsers/: index.html
search/: search_index.json
tests/: conftest.py
tests/parsers/: test_fireballs.py
